# Images

Projet/doc/: README.md  uml.txt
Projet/video/__MACOSX/: ._video
Projet/video/__MACOSX/video/: ._CMakeLists.txt  ._build  ._input  ._src
Projet/video/__MACOSX/video/input/: ._2020-02-14-180952.webm
Projet/video/__MACOSX/video/src/: ._main.cpp
Projet/video/video/: CMakeLists.txt
Projet/video/video/include/: color.hpp  track.hpp
Projet/video/video/src/: color.cpp  color.hpp  delimeted_zone.cpp  delimeted_zone.hpp  facedetect.cpp  main.cpp  track.cpp  track.hpp
